--- a/.gitignore
+++ b/.gitignore
@@ -95,51 +95,14 @@ logs/crafttweaker.log
 logs/latest.log
 usernamecache.json
 usercache.json
-saves/Playtest/stats/bcba50b7-867e-4867-9f5b-02007167d599.json
-saves/Playtest/session.lock
-saves/Playtest/serverconfig/mantle-server.toml
-saves/Playtest/serverconfig/journeymap-server.toml
-saves/Playtest/serverconfig/jei-server.toml
-saves/Playtest/serverconfig/integratedtunnels-server.toml
-saves/Playtest/serverconfig/integrateddynamics-server.toml
-saves/Playtest/serverconfig/forge-server.toml
-saves/Playtest/serverconfig/curios-server.toml
-saves/Playtest/serverconfig/create-server.toml
-saves/Playtest/serverconfig/compactcrafting-server.toml
-saves/Playtest/serverconfig/commoncapabilities-server.toml
-saves/Playtest/region/r.0.0.mca
-saves/Playtest/region/r.0.-1.mca
-saves/Playtest/region/r.-1.0.mca
-saves/Playtest/region/r.-1.-1.mca
-saves/Playtest/poi/r.0.0.mca
-saves/Playtest/poi/r.0.-1.mca
-saves/Playtest/poi/r.-1.0.mca
-saves/Playtest/poi/r.-1.-1.mca
-saves/Playtest/pneumaticcraft/AmadronPlayerOffers.cfg
-saves/Playtest/playerdata/bcba50b7-867e-4867-9f5b-02007167d599.dat_old
-saves/Playtest/playerdata/bcba50b7-867e-4867-9f5b-02007167d599.dat
-saves/Playtest/level.dat_old
-saves/Playtest/level.dat
-saves/Playtest/ftbteams/player/bcba50b7-867e-4867-9f5b-02007167d599.snbt
-saves/Playtest/ftbteams/ftbteams.snbt
-saves/Playtest/ftbquests/bcba50b7-867e-4867-9f5b-02007167d599.snbt
-saves/Playtest/entities/r.0.0.mca
-saves/Playtest/entities/r.0.-1.mca
-saves/Playtest/entities/r.-1.0.mca
-saves/Playtest/entities/r.-1.-1.mca
-saves/Playtest/DIM1/data/raids_end.dat
-saves/Playtest/DIM1/data/crafttweaker_saved_data.dat
-saves/Playtest/DIM1/data/capabilities.dat
-saves/Playtest/DIM-1/data/raids.dat
-saves/Playtest/DIM-1/data/crafttweaker_saved_data.dat
-saves/Playtest/DIM-1/data/capabilities.dat
-saves/Playtest/data/WorldUUID.dat
-saves/Playtest/data/raids.dat
-saves/Playtest/data/JMPlayerSettings.dat
-saves/Playtest/data/integrateddynamics_Networks.dat
-saves/Playtest/data/integrateddynamics_Labels.dat
-saves/Playtest/data/integrateddynamics_GlobalCounterData.dat
-saves/Playtest/data/crafttweaker_saved_data.dat
-saves/Playtest/data/capabilities.dat
-saves/Playtest/advancements/bcba50b7-867e-4867-9f5b-02007167d599.json
+saves/Playtest
 minecraftinstance.json
+**/*.jar
+!InstanceSync*.jar
+**/*.jar.disabled
+**/*.jar.meta
+**/*.log
+/.mixin.out
+/downloads
+/resourcepacks
+.curseclient
