qol update with lots of new stuff

--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -10,6 +10,9 @@ Angel Block Renewed
 Stone Chest
 Crafting On A Stick
 Time In A Bottle
-Modular Materials
 Crafting Automat
 Dimensional Paintings
+Building Gadgets
+Building Wands
+Pipez
+Quark
