Minor General Update

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,7 @@ saves
 config/jei/world/local/Playtest/bookmarks.ini
 options.txt
 config/modularmaterials/mmcc_backup
+patchouli_data.json
+schematics/e.nbt
+schematics/uploaded/secretmeister/e.nbt
+patchouli_data.json
