Initial playtest changes
Played the first bit of pack, made some changes

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ patchouli_data.json
 schematics/e.nbt
 schematics/uploaded/secretmeister/e.nbt
 patchouli_data.json
+fancymenu_data/last_world.fmdata
