--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ patchouli_data.json
 schematics
 config/jei/world
 fancymenu_data/last_world.fmdata
+config/openloader/data/empty-world-with-biomes-1.18.2-v1-0/pack.png
