Made it possible again, made some recipes less brutal, changed quests, removed quest rewards

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ schematics
 config/jei/world
 fancymenu_data/last_world.fmdata
 config/openloader/data/empty-world-with-biomes-1.18.2-v1-0/pack.png
+options.txt
