--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@ config/jei/world
 fancymenu_data/last_world.fmdata
 config/openloader/data/empty-world-with-biomes-1.18.2-v1-0/pack.png
 options.txt
+config/jade/jade.json
+config/pneumaticcraft/MicromissileDefaults.cfg
+config/roughlyenoughitems/hints.json
