Fixed REI cheating annoyance

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ options.txt
 config/jade/jade.json
 config/pneumaticcraft/MicromissileDefaults.cfg
 config/roughlyenoughitems/hints.json
+config/roughlyenoughitems/config.json5
